# Beergate

./: .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  ASISTENTE_IA_README.md  DEPLOYMENT.md  INSTALACION_ANDROID.md  LICENSE  MACHINE_LEARNING_README.md  QUICKSTART.md  README.md  README.old.md  RESUMEN_EJECUTIVO.md  docker-compose.production.yml  docker-compose.yml  inventario maltas.ods  inventario_maltas_clean.csv  setup.sh  start-simple.sh  start.sh
.github/: copilot-instructions.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  requirements.txt
esp32-voice-assistant/: .gitignore  BSP_MIGRATION_STATUS.md  BUILD_ESP_IDF.md  BUILD_INSTRUCTIONS.md  CAMBIOS_REALIZADOS.md  CHECKLIST_FINAL.md  CMakeLists.txt  CMakeLists_idf.txt  DIAGNOSTIC_RESULT.md  IMPLEMENTATION_GUIDE.md  LVGL_IMAGE_GUIDE.md  README.md  README_UI.md  README_UI_old.md  SISTEMA_COMPLETO_REAL.md  STATUS.md  (+11 more)
esp32-voice-assistant/components/esp-box-3/: CMakeLists.txt
esp32-voice-assistant/components/iot_button/: CMakeLists.txt
esp32-voice-assistant/main/: CMakeLists.txt  CMakeLists_new.txt  Kconfig.projbuild  app_main.c  app_main_backup_1769964343.c  app_main_new.c  app_main_old.c  app_main_old_backup.c  audio_capture.c  audio_capture.h  audio_capture_old.c  audio_capture_old.h  idf_component.yml.bak  ui.c  ui.h  ui_simple.c  wyoming_client.c  wyoming_client.h
esp32-voice-assistant/main/lv_esp_idf/lv_esp_idf/: README.md
esp32-voice-assistant/main/lv_esp_idf/main/: idf_component.yml
esp32-voice-assistant/main/lv_esp_idf/manifests/: esp32_p4_lcd_ev_board.json
esp32-voice-assistant/main/ui/: ui.c  ui.h
esp32-voice-assistant/main/ui/assets/: README.md  cat_0.c  cat_1.c  cat_2.c  cat_3.c
(+232 files in other folders)
